--- a/package.json
+++ b/package.json
@@ -4,49 +4,24 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "nuxt dev",
+    "build": "nuxt build",
+    "generate": "nuxt generate",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.4",
-    "@tailwindcss/vite": "^4.1.17",
-    "@tanstack/react-query": "^5.90.12",
-    "@vercel/blob": "^2.0.0",
-    "airtable": "^0.12.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "html5-qrcode": "^2.3.8",
-    "i18next": "^25.7.2",
-    "lucide-react": "^0.556.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-i18next": "^16.4.0",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0",
-    "vite-plugin-pwa": "^1.2.0",
-    "xlsx": "^0.18.5"
+    "nuxt": "^3.14.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
+    "@nuxtjs/tailwindcss": "^6.12.0",
     "@types/node": "^24.10.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vercel/node": "^5.5.15",
-    "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "tailwindcss": "^4.1.17",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-vue": "^9.30.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4"
+    "typescript-eslint": "^8.46.4"
   }
 }
