--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.90.12",
+    "nuxt": "^3.13.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
@@ -25,6 +27,8 @@
     "html5-qrcode": "^2.3.8",
     "i18next": "^25.7.2",
     "lucide-react": "^0.556.0",
+    "vue": "^3.5.13",
+    "vue-i18n": "^10.0.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.4.0",
