--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@tanstack/vue-query": "^5.90.12",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.12",
     "@vercel/blob": "^2.0.0",
@@ -31,6 +32,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vite-plugin-pwa": "^1.2.0",
+    "vue": "^3.5.13",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@types/react-dom": "^19.2.3",
     "@vercel/node": "^5.5.15",
     "@vitejs/plugin-react": "^5.1.1",
+    "@vitejs/plugin-vue": "^5.2.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
