--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.90.12",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-icons": "^1.3.2",
@@ -24,6 +25,8 @@
     "clsx": "^2.1.1",
     "html5-qrcode": "^2.3.8",
     "i18next": "^25.7.2",
+    "vue": "^3.5.13",
+    "vue-i18n": "^9.14.2",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
